RESOLVED FIXED216588
[macOS Big Sur] CGFontRenderingGetFontSmoothingDisabled() is no longer useful
https://bugs.webkit.org/show_bug.cgi?id=216588
Summary [macOS Big Sur] CGFontRenderingGetFontSmoothingDisabled() is no longer useful
Myles C. Maxfield
Reported 2020-09-15 15:59:14 PDT
[macOS Big Sur] CGFontRenderingGetFontSmoothingDisabled() is no longer useful
Attachments
Patch (1.16 KB, patch)
2020-09-15 16:00 PDT, Myles C. Maxfield
no flags
Patch (1.20 KB, patch)
2020-09-15 16:00 PDT, Myles C. Maxfield
no flags
Patch (2.54 KB, patch)
2020-09-15 16:11 PDT, Myles C. Maxfield
no flags
Patch (2.61 KB, patch)
2020-09-15 16:12 PDT, Myles C. Maxfield
no flags
Myles C. Maxfield
Comment 1 2020-09-15 16:00:09 PDT
Myles C. Maxfield
Comment 2 2020-09-15 16:00:32 PDT
Myles C. Maxfield
Comment 3 2020-09-15 16:11:30 PDT
Myles C. Maxfield
Comment 4 2020-09-15 16:12:03 PDT
Myles C. Maxfield
Comment 5 2020-09-15 16:22:25 PDT
EWS
Comment 6 2020-09-15 17:06:51 PDT
Committed r267116: <https://trac.webkit.org/changeset/267116> All reviewed patches have been landed. Closing bug and clearing flags on attachment 408877 [details].
Darin Adler
Comment 7 2020-09-20 11:18:38 PDT
Comment on attachment 408877 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=408877&action=review > Source/WTF/ChangeLog:9 > + We can eliminate WebKit's use of it to eventually phase it out entirely. But this patch doesn't eliminate WebKit’s use of it. Maybe you meant to say on newer versions of macOS? > Source/WTF/wtf/PlatformHave.h:349 > -#if PLATFORM(MAC) > +#if PLATFORM(MAC) && __MAC_OS_X_VERSION_MIN_REQUIRED < 110000 > #define HAVE_CG_FONT_RENDERING_GET_FONT_SMOOTHING_DISABLED 1 > #endif Is it true that newer versions of macOS don’t have this function? If not, then it’s not great to have this be a counterfactual. I would suggest changing it to USE if it’s going to be a policy flag now instead of a function availability flag. > Source/WebCore/platform/graphics/coretext/FontCascadeCoreText.cpp:-60 > -#elif PLATFORM(MAC) > - return true; Nothing in the change log explains this change. I assume it’s helpful to return false for isSubpixelAntialiasingAvailable on newer macOS, but I, for one, can’t figure out why,
Note You need to log in before you can comment on or make changes to this bug.