[macOS Big Sur] CGFontRenderingGetFontSmoothingDisabled() is no longer useful https://bugs.webkit.org/show_bug.cgi?id=216588 <rdar://problem/68657748>

Reviewed by Simon Fraser.

Source/WebCore:

No new tests because there is no behavior change.

* platform/graphics/coretext/FontCascadeCoreText.cpp:
(WebCore::FontCascade::isSubpixelAntialiasingAvailable):

Source/WTF:

We can eliminate WebKit's use of it to eventually phase it out entirely.

* wtf/PlatformHave.h:


Canonical link: https://commits.webkit.org/229395@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267116 268f45cc-cd09-0410-ab3c-d52691b4dbfc